--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Kipronoh" width="80">
+          <img src="./assets/images/my-avatar.png" alt="ZEBBYLION NJAU" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Kipronoh">Kipronoh Vincent</h1>
+          <h1 class="name" title="Zebbylion">ZEBBYLION NJAU</h1>
 
-          <p class="title">Software Engineer</p>
+          <p class="title">Back-end Engineer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:kipronohvincent43@gmail.com" class="contact-link">kipronohvincent43@gmail.com</a>
+              <a href="mailto:zebbynjau@gmail.com" class="contact-link">zebbynjau@gmail.com</a>
             </div>
 
           </li>
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+(254) 703646202" class="contact-link"> +(254) 703646202</a>
+              <a href="tel:+(254) 719204467" class="contact-link"> +(254) 719204467</a>
             </div>
 
           </li>
@@ -114,19 +114,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://github.com/KipronohVincent" class="social-link">
+            <a href="https://github.com/zebbyG" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
-          <li class="social-item">
+          <!-- <li class="social-item">
             <a href="https://twitter.com/KipronohVince" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/kipronoh-vincent-b09979212/" class="social-link">
+            <a href="https://www.linkedin.com/in/zebbylion-njau-3b6a6723b/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
