--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Vincent was hired to create a corporate identity. We were very pleased with the work done. He has a
+                    Zebbylion was hired to create a corporate identity. We were very pleased with the work done. He has a
                     lot of experience
                     and is very concerned about the needs of client.
                   </p>
@@ -289,7 +289,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Kipronoh was hired to implement up a web infrastructure design. We were satisfied with his services.
+                    Zebbylion was hired to implement up a web infrastructure design. We were satisfied with his services.
                   </p>
                 </div>
 
@@ -307,7 +307,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Vincent was hired to do improve our website and he did his job deligently.
+                    Zebbylion was hired to do improve our website and he did his job deligently.
                   </p>
                 </div>
 
@@ -318,14 +318,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.jpeg" alt="Zebbylion Njau" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-4.jpeg" alt="Kipronoh Vincent" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Zebby</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Kipronoh Vincent</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Kipronoh Vincent has mastered his skill and I strongly recommend him.
+                    Zebbylion has mastered his skill and I strongly recommend him.
                   </p>
                 </div>
 
@@ -343,7 +343,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Kipronoh Vincent is an honest and dedicated person.
+                    Zebbylion Njau is an honest and dedicated person.
                   </p>
                 </div>
 
