--- a/index.html
+++ b/index.html
@@ -191,10 +191,20 @@
 
         <section class="about-text">
           <p>
-            I’m Currently studying at Alx-Holberton School of Computer Science as a Software Engineer and contributing to frontend and backend for building web applications.</p>
+            Currently, I am at Holberton School, ALX program, pursuing Software Engineering taking part in most of Back-end engineering and some of the basics of front-end.</p>
 
           <p>
-            In my free time, I work on RapidAPI, solve problems on Codecademy, read tech articles and explore technical content.
+           I am *proficient* in:
+            <li>
+              <ul>Writing, testing and debugging python, HTML and CSS code.</ul>
+              <ul>Engineering Devops, configuring servers with domains to enable/extend functionality.</ul>
+              <ul>Leverage cloud HTTP load balancer to manage scalable and sustainable APIs.</ul>
+              <ul>MySQL queries.</ul>
+            </li>
+          </p>
+          <p>
+            In my free time, I solve python problems on cousera and other tech quiz websites, read tech blogs and articles and explore the tech world.
+            <br>I also join AMA sessions to enhance my skills.
           </p>
         </section>
 
@@ -217,7 +227,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Devops</h4>
+                <h4 class="h4 service-item-title">Engineering Devops</h4>
 
                 <p class="service-item-text">
                   The most modern and high-quality design made at a professional level.
@@ -233,7 +243,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Backend Engineering</h4>
+                <h4 class="h4 service-item-title">Back-end Engineering</h4>
 
                 <p class="service-item-text">
                   High-quality development of sites at the professional level.
@@ -252,7 +262,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -300,10 +310,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Diana Beki" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-3.png" alt="Mary Wanjiru" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Diana Beki</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Mary Wanjiru</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -318,7 +328,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.jpeg" alt="Kipronoh Vincent" width="0.5" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-4.jpeg" alt="Kipronoh Vincent" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Kipronoh Vincent</h4>
@@ -352,14 +362,14 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+        <!-- <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -380,7 +390,7 @@
             
           </section>
 
-        </div>
+        </div> -->
 
 
         <!--
@@ -433,7 +443,7 @@
 
         </section> -->
 
-      </article>
+      <!-- </article> -->
 
 
 
