--- a/index.html
+++ b/index.html
@@ -156,19 +156,19 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <button class="navbar-link  active" data-nav-link>ABOUT</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link>RESUME</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>PORTFOLIO</button>
           </li
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>CONTACT</button>
           </li>
 
         </ul>
@@ -186,7 +186,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h2 class="h2 article-title">About</h2>
         </header>
 
         <section class="about-text">
@@ -222,8 +222,8 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-design.svg"
+                alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -369,7 +369,7 @@
           - testimonials modal
         -->
 
-        <!-- <div class="modal-container" data-modal-container>
+        <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -390,7 +390,7 @@
             
           </section>
 
-        </div> -->
+        </div>
 
 
         <!--
@@ -443,7 +443,7 @@
 
         </section> -->
 
-      <!-- </article> -->
+      </article>
 
 
 
@@ -466,24 +466,24 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">EDUCATION</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Alx-Africa(Holberton School).</h4>
+              <h4 class="h4 timeline-item-title">Holberton School (ALX Africa).</h4>
 
-              <span>February 2022 - March 2023</span>
+              <span>2022 February - 2023 March</span>
 
               <p class="timeline-text">
-                Software Engineer.
+                Software Engineering.
               </p>
 
             </li>
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Laikipia University.</h4>
 
@@ -494,17 +494,17 @@
                 Bachelor of Agri-business Management.
               </p>
 
-            </li>
+            </li> -->
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Londiani Boys High School </h4>
+              <h4 class="h4 timeline-item-title">Agape Hope Secondary Schools </h4>
 
-              <span>September 2015 - 2019
+              <span>1988 January - 1991 April
               </span>
 
               <p class="timeline-text">
-                K.C.S.E
+                Secondary Education(K.C.S.E)
               </p>
 
             </li>
@@ -520,24 +520,25 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">EXPIRIENCE</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">ALX - Junior Full-Stack developer</h4>
+              <h4 class="h4 timeline-item-title">ALX - Software Engineer</h4>
 
-              <span>February 2022 - PRESENT</span>
+              <span>2022 February - PRESENT</span>
 
               <p class="timeline-text">
                 Writing, testing, and debugging code.<br>
-                Integration to internal APIs to extend existing functionality.<br>
-                Leveraged AWS cloud HTTP load balancer to manage scalable and sustainable APIs.<br>
-                Design a suitable web infrastructure, build, configure automate and support application deployments for solid works.<br>
+                Engineering Devops, configuring servers with domains to enable/extend functionality.<br>
+                Leverage cloud HTTP load balancer to manage scalable and sustainable APIs.<br>
+                MySQL queries.<br>
+                <!-- Design a suitable web infrastructure, build, configure automate and support application deployments for solid works.<br>
                 Using a working knowledge of ORM (SQLalchemy) library to solve issues related to data layer requirements with CRUD.<br>
-                I participate in weekly peer code reviews and AMA sessions to ensure quality development processes.
+                I participate in weekly peer code reviews and AMA sessions to ensure quality development processes. -->
 
               </p>
 
@@ -616,17 +617,17 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://medium.com/@ZebbyG/what-happens-when-you-type-https-www-google-com-on-your-browser-and-hit-enter-302a226010b5">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="Loopstudio" loading="lazy">
+                  <img src="./assets/images/project-2.png" alt="What happens when you type a url on a and hit enter" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">LoopStudio</h3>
+                <h3 class="project-title">What happens when you type a url on a browser and hit enter</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -651,7 +652,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <!-- <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
                 <figure class="project-img">
@@ -666,7 +667,7 @@
 
                 <p class="project-category">Applications</p>
 
-              </a>
+              </a> -->
             </li>
           </ul>
 
