--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>PORTFOLIO</button>
-          </li
+          </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>CONTACT</button>
@@ -191,16 +191,7 @@
 
         <section class="about-text">
           <p>
-            Currently, I am at Holberton School, ALX program, pursuing Software Engineering taking part in most of Back-end engineering and some of the basics of front-end.</p>
-           I am *proficient* in:
-            <ul>
-              <li>Writing, testing and debugging python, HTML and CSS code.
-              <li>Engineering Devops, configuring servers with domains to enable/extend functionality.
-              <li>Leverage cloud HTTP load balancer to manage scalable and sustainable APIs.
-              <li>MySQL queries.
-            </ul>
-          
-          
+           Zebbylion Njau is a driven and motivated individual who is currently pursuing his IT studies at Holberton School's ALX program. He possesses a strong passion for technology and has developed impressive back-end skills, including proficiency in the flask framework and working with databases. In addition to his technical abilities, Zebbylion also has a desire to make a positive impact on society. He has a habit of identifying problems and actively seeking solutions, making him a valuable asset in any team. Overall, Zebbylion is a well-rounded and dedicated IT student who is destined for success in his future endeavors.
           <p>
             <br>In my free time, I solve python problems on cousera and other tech quiz websites, read tech blogs and articles to explore the tech world.
             I also join AMA(AskMeAnything) sessions in the program to enhance my skills.
@@ -535,6 +526,7 @@
                 Engineering Devops, configuring servers with domains to enable/extend functionality.<br>
                 Leverage cloud HTTP load balancer to manage scalable and sustainable APIs.<br>
                 MySQL queries.<br>
+                Python Flask Framework.<br>
                 <!-- Design a suitable web infrastructure, build, configure automate and support application deployments for solid works.<br>
                 Using a working knowledge of ORM (SQLalchemy) library to solve issues related to data layer requirements with CRUD.<br>
                 I participate in weekly peer code reviews and AMA sessions to ensure quality development processes. -->
