--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
             </a>
           </li>
 
-          <!-- <li class="social-item">
-            <a href="https://twitter.com/KipronohVince" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+          <li class="social-item">
+            <a href="https://www.instagram.com/_top.shotta/" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
             </a>
-          </li> -->
+          </li>
 
           <li class="social-item">
             <a href="https://www.linkedin.com/in/zebbylion-njau-3b6a6723b/" class="social-link">
