--- a/index.html
+++ b/index.html
@@ -160,15 +160,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>RESUME</button>
-          </li>
-
-          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>PORTFOLIO</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>CONTACT</button>
           </li>
 
         </ul>
@@ -191,7 +183,11 @@
 
         <section class="about-text">
           <p>
-           Zebbylion Njau is a driven and motivated individual who is currently pursuing his IT studies at Holberton School's ALX program. He possesses a strong passion for technology and has developed impressive back-end skills, including proficiency in the flask framework and working with databases. In addition to his technical abilities, Zebbylion also has a desire to make a positive impact on society. He has a habit of identifying problems and actively seeking solutions, making him a valuable asset in any team. Overall, Zebbylion is a well-rounded and dedicated IT student who is destined for success in his future endeavors.
+          Zebbylion Njau is a lively Information Technology student with a passion for problem-solving and a strong work ethic. He possess a variety of technical skills, including a basic understanding of the Flask framework and some backend development skills, which they have developed through their studies at Holberton School's ALX program.
+
+          <p>
+            In addition to his technical abilities, Zebbylion has demonstrated a range of valuable soft skills. He is an excellent communicator, able to convey complex technical concepts in a clear and concise manner. He is also highly organized, able to manage his time effectively and prioritize tasks to meet deadlines.
+            Zebbylion is a collaborative team player, with exceptional critical thinking and problem-solving skills, making him an asset to any team.
           <p>
             <br>In my free time, I solve python problems on cousera and other tech quiz websites, read tech blogs and articles to explore the tech world.
             I also join AMA(AskMeAnything) sessions in the program to enhance my skills.
@@ -248,117 +244,6 @@
         </section>
 
 
-        <!--
-          - testimonials
-        -->
-
-        <!-- <section class="testimonials">
-
-          <h3 class="h3 testimonials-title">Testimonials</h3>
-
-          <ul class="testimonials-list has-scrollbar">
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Brian" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Brian Toromo</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Zebbylion was hired to create a corporate identity. We were very pleased with the work done. He has a
-                    lot of experience
-                    and is very concerned about the needs of client.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-2.png" alt="Rose" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Rose Wangari</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Zebbylion was hired to implement up a web infrastructure design. We were satisfied with his services.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Mary Wanjiru" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Mary Wanjiru</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Zebbylion was hired to do improve our website and he did his job deligently.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.jpeg" alt="Kipronoh Vincent" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Kipronoh Vincent</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Zebbylion has mastered his skill and I strongly recommend him.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Nevillionaire" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Nevillionaire</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Zebbylion Njau is an honest and dedicated person.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-          </ul>
-
-        </section> -->
-
-
-        <!--
-          - testimonials modal
-        -->
-
         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
@@ -383,169 +268,7 @@
         </div>
 
 
-        <!--
-          - clients
-        -->
-
-        <!-- <section class="clients">
-
-          <h3 class="h3 clients-title">Clients</h3>
-
-          <ul class="clients-list has-scrollbar">
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
-              </a>
-            </li>
-
-          </ul>
-
-        </section> -->
-
       </article>
-
-
-
-
-
-      <!--
-        - #RESUME
-      -->
-
-      <article class="resume" data-page="resume">
-
-        <header>
-          <h2 class="h2 article-title">Resume</h2>
-        </header>
-
-        <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">EDUCATION</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Holberton School (ALX Africa).</h4>
-
-              <span>2022 February - 2023 March</span>
-
-              <p class="timeline-text">
-                Software Engineering.
-              </p>
-
-            </li>
-
-            <!-- <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Laikipia University.</h4>
-
-              <span>September 2015 - 2019
-              </span>
-
-              <p class="timeline-text">
-                Bachelor of Agri-business Management.
-              </p>
-
-            </li> -->
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Agape Hope Secondary Schools </h4>
-
-              <span>1988 January - 1991 April
-              </span>
-
-              <p class="timeline-text">
-                Secondary Education(K.C.S.E)
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">EXPIRIENCE</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">ALX - Software Engineer</h4>
-
-              <span>2022 February - PRESENT</span>
-
-              <p class="timeline-text">
-                Writing, testing, and debugging code.<br>
-                Engineering Devops, configuring servers with domains to enable/extend functionality.<br>
-                Leverage cloud HTTP load balancer to manage scalable and sustainable APIs.<br>
-                MySQL queries.<br>
-                Python Flask Framework.<br>
-                <!-- Design a suitable web infrastructure, build, configure automate and support application deployments for solid works.<br>
-                Using a working knowledge of ORM (SQLalchemy) library to solve issues related to data layer requirements with CRUD.<br>
-                I participate in weekly peer code reviews and AMA sessions to ensure quality development processes. -->
-
-              </p>
-
-            </li>
-
-            </li> 
-          </ol>
-
-        </section>
-
-
-      </article>
-
-
-
-
 
       <!--
         - #PORTFOLIO
@@ -562,16 +285,20 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
+              <button class="active" data-filter-btn>ALL</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>APPLICATIONS</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>WEB DEVELOPMENT</button>
             </li>
+
+            <li class="filter-item">
+                <button data-filter-btn>BLOGS</button>
+              </li>
 
           </ul>
 
@@ -590,15 +317,19 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>All</button>
+                <button data-select-item>ALL</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>APPLICATIONS</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>WEB DEVELOPMENT</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>BLOGS</button>
               </li>
 
             </ul>
@@ -608,17 +339,17 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://medium.com/@ZebbyG/what-happens-when-you-type-https-www-google-com-on-your-browser-and-hit-enter-302a226010b5">
+              <a href="https://top-gz.netlify.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="What happens when you type a url on a and hit enter" loading="lazy">
+                  <img src="./assets/images/project-2.jpg" alt="ZebbyG Online Shoe Shop" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">What happens when you type a url on a browser and hit enter</h3>
+                <h3 class="project-title">Top Gz Online Shoe Shop</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -643,23 +374,6 @@
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-8.png" alt="task manager" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Quiz App</h3>
-
-                <p class="project-category">Applications</p>
-
-              </a> -->
-            </li>
           </ul>
 
         </section>
