--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/_top.shotta/" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
+            <a href="https://medium.com/@ZebbyG" class="social-link">
+              <ion-icon name="logo-medium"></ion-icon>
             </a>
           </li>
 
@@ -289,7 +289,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>APPLICATIONS</button>
+              <button data-filter-btn>BACK-END DEVELOPMENT</button>
             </li>
 
             <li class="filter-item">
@@ -321,7 +321,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>APPLICATIONS</button>
+                <button data-select-item>BACK-END DEVELOPMENT</button>
               </li>
 
               <li class="select-item">
@@ -356,67 +356,61 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="back-end development">
+              <a href="https://github.com/zebbyG/My-online-shoe_shop/blob/main/Trial-shoe-shop/shoe-shop_trial.py">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="AirBnB" loading="lazy">
+                  <img src="./assets/images/project-4.jpg" alt="shoeshop" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">AirBnB</h3>
+                <h3 class="project-title">ShoeShop</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">BACK-END DEVELOPMENT</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="back-end development">
+              <a href="https://github.com/zebbyG/python-calculator/blob/main/calculator.py">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-41.jpg" alt="calculater" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Calculator</h3>
+
+                <p class="project-category">BACK-END DEVELOPMENT</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="blogs">
+              <a href="https://medium.com/@ZebbyG/what-happens-when-you-type-https-www-google-com-on-your-browser-and-hit-enter-302a226010b5">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/blog.jpg" alt="blog post" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">WHAT HAPPENS WHEN YOU TYPE A URL IN THE BROWSER AND HIT ENTER?!?</h3>
+
+                <p class="project-category">BLOGS</p>
 
               </a>
             </li>
 
           </ul>
-
-        </section>
-
-      </article>
-
-
-      <!--
-        - #CONTACT
-      -->
-
-      <article class="contact" data-page="contact">
-
-        <header>
-          <h2 class="h2 article-title">Contact</h2>
-        </header>
-
-        <section class="mapbox" data-mapbox>
-          <figure>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d349692.36226695334!2d36.854507157682484!3d-1.3037166976631496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ske!4v1667231919381!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </figure>
-        </section>
-
-        <section class="contact-form">
-
-          <h3 class="h3 form-title">Contact Form</h3>
-
-          <form action="#" class="form" data-form>
-
-            <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
-
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
-            </div>
-
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
-
-            <button class="form-btn" type="submit" disabled data-form-btn>
-              <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
-            </button>
-
-          </form>
 
         </section>
 
