--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://top-gz.netlify.app/">
+              <a href="https://topg1.netlify.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
