change link in index.html

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="back-end development">
-              <a href="https://github.com/zebbyG/My-online-shoe_shop/blob/main/Trial-shoe-shop/shoe-shop_trial.py">
+              <a href="https://github.com/zebbyG/TOP_Gz_SHOE-SHOP">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
