update main file

--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
 
         <section class="about-text">
           <p>
-          Zebbylion Njau is a lively Information Technology student with a passion for problem-solving and a strong work ethic. He possess a variety of technical skills, including a basic understanding of the Flask framework and some backend development skills, which they have developed through their studies at Holberton School's ALX program.
+          Zebbylion Njau is a lively Information Technology student with a passion for problem-solving and a strong work ethic. He possesses a variety of technical skills, including a basic understanding of the Flask framework and some backend development skills, which he developed through his studies at Holberton School's ALX program.
 
           <p>
             In addition to his technical abilities, Zebbylion has demonstrated a range of valuable soft skills. He is an excellent communicator, able to convey complex technical concepts in a clear and concise manner. He is also highly organized, able to manage his time effectively and prioritize tasks to meet deadlines.
             Zebbylion is a collaborative team player, with exceptional critical thinking and problem-solving skills, making him an asset to any team.
           <p>
-            <br>In my free time, I solve python problems on cousera and other tech quiz websites, read tech blogs and articles to explore the tech world.
+            <br>In my free time, I solve python problems on pynative and other tech quiz websites, read tech blogs and articles to explore the tech world.
             I also join AMA(AskMeAnything) sessions in the program to enhance my skills.
           </p>
           
