--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         <section class="about-text">
           <p>
-          Zebbylion Njau is a lively Information Technology student with a passion for problem-solving and a strong work ethic. He possesses a variety of technical skills, including a basic understanding of the Flask framework and some backend development skills, which he developed through his studies at Holberton School's ALX program.
+          Zebbylion Njau is a lively Information Technology graduate with a passion for problem-solving and a strong work ethic. He possesses a variety of technical skills, including a basic understanding of the Flask framework and some backend development skills, which he developed through his studies at Holberton School's ALX program.
 
           <p>
             In addition to his technical abilities, Zebbylion has demonstrated a range of valuable soft skills. He is an excellent communicator, able to convey complex technical concepts in a clear and concise manner. He is also highly organized, able to manage his time effectively and prioritize tasks to meet deadlines.
