add shoe-shop project

--- a/index.html
+++ b/index.html
@@ -351,7 +351,25 @@
 
                 <h3 class="project-title">Top Gz Online Shoe Shop</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">HTML/CSS and Js</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="back-end development">
+              <a href="https://github.com/zebbyG/topg-shop">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-4.jpg" alt="shoeshop" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Web-app Shoe shop</h3>
+
+                <p class="project-category">Python Django</p>
 
               </a>
             </li>
@@ -369,7 +387,7 @@
 
                 <h3 class="project-title">ShoeShop</h3>
 
-                <p class="project-category">BACK-END DEVELOPMENT</p>
+                <p class="project-category">Python</p>
 
               </a>
             </li>
@@ -382,12 +400,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-41.jpg" alt="calculater" loading="lazy">
+                  <img src="./assets/images/project-41.jpg" alt="calculator" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Calculator</h3>
 
-                <p class="project-category">BACK-END DEVELOPMENT</p>
+                <p class="project-category">Python</p>
 
               </a>
             </li>
@@ -405,7 +423,7 @@
 
                 <h3 class="project-title">WHAT HAPPENS WHEN YOU TYPE A URL IN THE BROWSER AND HIT ENTER?!?</h3>
 
-                <p class="project-category">BLOGS</p>
+                <p class="project-category">Devops Blog</p>
 
               </a>
             </li>
